# market-decision-engine

./: README.md  SCHEDULE.md  pyproject.toml
contract/: PROJECT_CONTEXT.md  repo_index.yml
documents/: 000_ドキュメント一覧.md  001_実装規約.md  002_スケジュール.md  010_要件定義.md  01_RD.md  020_外部設計.md  030_内部設計.md  031_ディレクトリ構成.md  040_パイプライン設計書.md  050_データ設計書.md  060_フェイルセーフ設計書.md  070_用語集.md  080_ADR.md
notebooks/: 01_sandbox.ipynb  02_experiments.ipynb
src/: main.py
src/data/loaders/: yfinance.py
src/market_decision_engine/: exceptions.py
src/market_decision_engine/config/: defaults.py  loader.py  resolver.py
src/market_decision_engine/contract/: errors.py
src/market_decision_engine/contract/schemas/: market.py  policy.py
src/market_decision_engine/domain/: models.py
src/market_decision_engine/domain/rules/: chart_view.py  market_data.py
src/market_decision_engine/pipeline/: context.py  eod.py
src/market_decision_engine/reports/: json_report.py
src/market_decision_engine/schemas/: decision.py  features.py  market.py  policy.py  reports.py
src/market_decision_engine/universe/: jp.py
